deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: rails-blueprint
  name: rails-blueprint
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 3000
  selector:
    app: rails-blueprint
  type: ClusterIP
