deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rails-blueprint
spec:
 rules:
 - http:
     paths:
     - path: /*
       backend:
         serviceName: rails-blueprint
         servicePort: 8080
